[gd_scene load_steps=6 format=3 uid="uid://dnb37gs7j3m0l"]

[ext_resource type="FontFile" uid="uid://ddlpharl1y2f7" path="res://fonts/Crimson_Pro/static/CrimsonPro-Italic.ttf" id="1_otm1p"]
[ext_resource type="Script" uid="uid://bccetd7qu8vy3" path="res://scripts/settings.gd" id="1_q6dhs"]
[ext_resource type="Texture2D" uid="uid://dtfwcb0sb1nys" path="res://sprites/decks/anglo_thumb.png" id="2_wgrb7"]
[ext_resource type="Texture2D" uid="uid://cqplbnmb605lq" path="res://sprites/decks/adler_thumb.png" id="3_esysf"]
[ext_resource type="Texture2D" uid="uid://bqi0pn5ofbvyi" path="res://sprites/decks/atlasnye_thumb.png" id="4_tg80b"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6dhs")

[node name="settings" type="Label" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 32.0
offset_right = 776.0
offset_bottom = 144.0
theme_override_fonts/font = ExtResource("1_otm1p")
theme_override_font_sizes/font_size = 100
text = "Settings"
horizontal_alignment = 1

[node name="deck_style" type="Label" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 192.0
offset_right = 557.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("1_otm1p")
theme_override_font_sizes/font_size = 66
text = "Deck style: "

[node name="deck_style_option" type="OptionButton" parent="deck_style"]
layout_mode = 0
offset_left = 288.0
offset_right = 704.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("1_otm1p")
theme_override_font_sizes/font_size = 50
selected = 0
item_count = 3
popup/item_0/text = " Anglo"
popup/item_0/icon = ExtResource("2_wgrb7")
popup/item_0/id = 0
popup/item_1/text = " Adler"
popup/item_1/icon = ExtResource("3_esysf")
popup/item_1/id = 1
popup/item_2/text = " Atlasnye"
popup/item_2/icon = ExtResource("4_tg80b")
popup/item_2/id = 2

[node name="credits" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 576.0
offset_right = 992.0
offset_bottom = 672.0
theme_override_fonts/font = ExtResource("1_otm1p")
theme_override_font_sizes/font_size = 60
text = "Credits"

[node name="menu" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 448.0
offset_right = 992.0
offset_bottom = 544.0
theme_override_fonts/font = ExtResource("1_otm1p")
theme_override_font_sizes/font_size = 60
text = "Back to menu"

[node name="resume" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 320.0
offset_right = 992.0
offset_bottom = 416.0
theme_override_fonts/font = ExtResource("1_otm1p")
theme_override_font_sizes/font_size = 60
text = "Resume"

[connection signal="item_selected" from="deck_style/deck_style_option" to="." method="_on_deck_style_option_item_selected"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
